--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+    
 <head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width-devide-width, initial-scale=1.0">
     <title>Jogos de Graça</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <h1>Jogos de Graça</h1>
