--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Jogos de Graça</h1>
-    <h6>qualquer coisa</h6>
-    <img src="202205601_jogos_streaming (1).webp" alt="controle de videogame">
+   <header>
+       <h1>Jogos de Graça</h1>
+       <h6>qualquer coisa</h6>
+       <p>paragrafo</p>
+       <img src="202205601_jogos_streaming (1).webp" alt="controle de videogame">
+       <!-- h1 e h6 são títulos e a diferença são os tamanhos -->
+   </header>
 </body>
 </html>
