--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
    <header>
        <h1>Jogos de Graça</h1>
-       <h6>qualquer coisa</h6>
-       <p>paragrafo</p>
+       <h6>jogos de graça para você</h6>
+       <p>online e offline</p>
        <img src="202205601_jogos_streaming (1).webp" alt="controle de videogame">
        <!-- h1 e h6 são títulos e a diferença são os tamanhos -->
    </header>
