--- a/index.html
+++ b/index.html
@@ -16,5 +16,11 @@
        
        <!-- h1 e h6 são títulos e a diferença são os tamanhos -->
    </header>
+   <section>
+        <h2>Jogos de Graça</h2>
+        <p>Jogos online e offiline que são de graça para as plataformas PC e Android</p>
+        <img src="./fortnite-1060x597.jpg" alt="imagem no Fortnite">
+
+   </section>
 </body>
 </html>
