--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    <section>
         <h2>Jogos de Graça</h2>
         <p>Jogos online e offiline que são de graça para as plataformas PC e Android</p>
-        <img src="./fortnite-1060x597.jpg" alt="imagem no Fortnite">
+        <img class="img-intro" src="./fortnite-1060x597.jpg" alt="imagem no Fortnite">
 
    </section>
 </body>
