--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        
        <!-- h1 e h6 são títulos e a diferença são os tamanhos -->
    </header>
-   <section>
+   <section class="intro">
         <h2>Jogos de Graça</h2>
         <p>Jogos online e offiline que são de graça para as plataformas PC e Android</p>
         <img class="img-intro" src="./fortnite-1060x597.jpg" alt="imagem no Fortnite">
