--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
        <!-- h1 e h6 são títulos e a diferença são os tamanhos -->
    </header>
    <section class="intro">
-        <h2>Jogos de Graça</h2>
-        <p>Jogos online e offiline que são de graça para as plataformas PC e Android</p>
+        <div>
+             <h2>Jogos de Graça</h2>
+             <p>Jogos online e offiline que são de graça para as plataformas PC e Android</p>
+        </div>
         <img class="img-intro" src="./fortnite-1060x597.jpg" alt="imagem no Fortnite">
 
    </section>
