--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
              <h2>Jogos de Graça</h2>
              <p>Jogos online e offiline que são de graça para as plataformas PC e Android</p>
         </div>
-        <img class="img-intro" src="./fortnite-1060x597.jpg" alt="imagem no Fortnite">
+        <img src="./fortnite logo.jpg" alt="logo do fortnite">
 
    </section>
 </body>
