--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    </header>
    <section class="intro">
         <div>
-             <h2>Jogos de Graça</h2>
+             <h2>Jogos</h2>
              <p>Jogos online e offiline que são de graça para as plataformas PC e Android</p>
         </div>
         <img src="./fortnite logo.jpg" alt="logo do fortnite">
