--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
    </header>
    <section class="intro">
         <div>
-             <h2>Jogos</h2>
-             <p>Jogos online e offiline que são de graça para as plataformas PC e Android</p>
+             <h2>Fortnite</h2>
+             <p>Fortnite é um jogo eletrônico multijogador online, desenvolvido pela Epic Games e lançado como diferentes modos de jogo</p>
         </div>
-        <img src="./fortnite logo.jpg" alt="logo do fortnite">
+        <img class="primeiro jogo" src="./fortnite logo.jpg" alt="logo do fortnite">
 
    </section>
 </body>
