--- a/index.html
+++ b/index.html
@@ -24,5 +24,19 @@
         <img class="primeiro jogo" src="./fortnite logo.jpg" alt="logo do fortnite">
 
    </section>
+   <section class="equipe">
+        <div>
+            <img src="./fortnite logo.jpg" alt="foto da Maria">
+            <h3>Maria Eduarda</h3>
+        </div>
+        <div>
+            <img src="./fortnite logo.jpg" alt="foto da Kauane">
+            <h3>Kauane</h3>
+        </div>
+        <div>
+            <img src="./fortnite logo.jpg" alt="foto da Valentina">
+            <h3>Valentina</h3>
+        </div>
+   </section>
 </body>
 </html>
