--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
    </section>
    <section class="equipe">
         <div>
-            <img src="./fortnite logo.jpg" alt="foto da Maria">
+            <img class="foto-equipe" src="./fortnite logo.jpg" alt="foto da Maria">
             <h3>Maria Eduarda</h3>
         </div>
         <div>
-            <img src="./fortnite logo.jpg" alt="foto da Kauane">
+            <img class="foto-equipe" src="./fortnite logo.jpg" alt="foto da Kauane">
             <h3>Kauane</h3>
         </div>
         <div>
-            <img src="./fortnite logo.jpg" alt="foto da Valentina">
+            <img class="foto-equipe" src="./fortnite logo.jpg," alt="foto da Valentina">
             <h3>Valentina</h3>
         </div>
    </section>
