--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
    </section>
    <section class="equipe">
         <div>
-            <img class="foto-equipe" src="./fortnite logo.jpg," alt="foto da Valentina">
+            <img class="foto-equipe" src="./fortnite logo.jpg" alt="foto da Valentina">
             <h3>Valentina</h3>
         </div>
         <div>
