--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
    </section>
    <section class="equipe">
         <div>
-            <img class="foto-equipe" src="./fortnite logo.jpg" alt="foto da Valentina">
+            <img class="foto-equipe" src="./fortnite logo.jpg" alt="foto da Valentina - n° 38">
             <h3>Valentina</h3>
         </div>
         <div>
-            <img class="foto-equipe" src="./fortnite logo.jpg" alt="foto da Maria">
+            <img class="foto-equipe" src="./fortnite logo.jpg" alt="foto da Maria - n°27">
             <h3>Maria Eduarda</h3>
         </div>
         <div>
-            <img class="foto-equipe" src="./fortnite logo.jpg" alt="foto da Kauane">
+            <img class="foto-equipe" src="./fortnite logo.jpg" alt="foto da Kauane - n°22">
             <h3>Kauane</h3>
         </div>
         
