--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
    </section>
    <section class="equipe">
         <div>
-            <img class="foto-equipe" src="./fortnite logo.jpg" alt="foto da Valentina n° 38">
-            <h3>Valentina</h3>
+            <img class="foto-equipe" src="./fortnite logo.jpg" alt="foto da Valentina">
+            <h3>Valentina - n° 38</h3>
         </div>
         <div>
-            <img class="foto-equipe" src="./fortnite logo.jpg" alt="foto da Maria n°27">
-            <h3>Maria Eduarda</h3>
+            <img class="foto-equipe" src="./fortnite logo.jpg" alt="foto da Maria">
+            <h3>Maria Eduarda - n°27</h3>
         </div>
         <div>
-            <img class="foto-equipe" src="./fortnite logo.jpg" alt="foto da Kauane n°22">
-            <h3>Kauane</h3>
+            <img class="foto-equipe" src="./fortnite logo.jpg" alt="foto da Kauane">
+            <h3>Kauane - n° 22</h3>
         </div>
         
    </section>
