--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
    <header>
        <h1>Jogos de Graça</h1>
-       <h6>jogos de graça para você</h6>
+       <h6>Jogos de graça para você, divulgamos novos jogos em nossas redes sociais</h6>
        <p>online e offline</p>
        <img src="202205601_jogos_streaming (1).webp" alt="controle de videogame">
        
@@ -39,5 +39,9 @@
         </div>
         
    </section>
+   <footer>
+        <p>Nos siga em: <a href="https://store.steampowered.com/?l=portuguese"></a></p>
+        <p>Entre em contato por (41)xxxxx-xxxx</p>
+   </footer>
 </body>
 </html>
