--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         
    </section>
    <footer>
-        <p>Nos siga em: <a href="https://store.steampowered.com/?l=portuguese"></a></p>
+        <p>Nos siga em: <a href="https://store.steampowered.com/?l=portuguese">nosso Instagram</a></p>
         <p>Entre em contato por (41)xxxxx-xxxx</p>
    </footer>
 </body>
