--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
    <header>
        <h1>Jogos de Graça</h1>
-       <h6>Jogos de graça para você, divulgamos novos jogos em nossas redes sociais</h6>
-       <p>online e offline</p>
+       <h6>Jogos de graça para você, online e offiline. Divulgamos novos jogos em nossas redes sociais</h6>
+       <p>Nossa equipe</p>
        <img src="202205601_jogos_streaming (1).webp" alt="controle de videogame">
        
        <!-- h1 e h6 são títulos e a diferença são os tamanhos -->
