--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <header>
        <h1>Jogos de Graça</h1>
        <h6>Jogos de graça para você, online e offiline. Divulgamos novos jogos em nossas redes sociais</h6>
-       <a href="nossa equipe"><p>Nossa equipe</p></a>
+       <a href="#equipe"><p>Nossa equipe</p></a>
        <img src="202205601_jogos_streaming (1).webp" alt="controle de videogame">
        
        <!-- h1 e h6 são títulos e a diferença são os tamanhos -->
@@ -25,21 +25,21 @@
         <div>
             <h2>Fortnite</h2>
             <p>Fortnite é um jogo eletrônico multijogador online, desenvolvido pela Epic Games e lançado como diferentes modos de jogo</p>
-       </div>
-       <img class="primeiro jogo" src="./fortnite logo.jpg" alt="logo do fortnite">
-       <div>
+        </div>
+        <img class="primeiro jogo" src="./fortnite logo.jpg" alt="logo do fortnite">
+        <div>
             <h2>Fortnite</h2>
             <p>Fortnite é um jogo eletrônico multijogador online, desenvolvido pela Epic Games e lançado como diferentes modos de jogo</p>
-       </div>
-       <img class="primeiro jogo" src="./fortnite logo.jpg" alt="logo do fortnite">
-   <div>
-    <h2>Fortnite</h2>
-    <p>Fortnite é um jogo eletrônico multijogador online, desenvolvido pela Epic Games e lançado como diferentes modos de jogo</p>
-</div>
+        </div>
+        <img class="primeiro jogo" src="./fortnite logo.jpg" alt="logo do fortnite">
+        <div>
+            <h2>Fortnite</h2>
+            <p>Fortnite é um jogo eletrônico multijogador online, desenvolvido pela Epic Games e lançado como diferentes modos de jogo</p>
+        </div>
 <img class="primeiro jogo" src="./fortnite logo.jpg" alt="logo do fortnite">
 
    </section>
-   <section class="equipe">
+   <section id="equipe">
         <div>
             <img class="foto-equipe" src="./fortnite logo.jpg" alt="foto da Valentina">
             <h3>Valentina - n° 38</h3>
