--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
    </section>
    <section id="equipe">
         <div>
-            <img class="foto-equipe" src="./fortnite logo.jpg" alt="foto da Valentina">
+            <img class="foto-equipe" src="./image 7.png" alt="foto da Valentina">
             <h3>Valentina - n° 38</h3>
         </div>
         <div>
