--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
             <h3>Valentina - n° 38</h3>
         </div>
         <div>
-            <img class="foto-equipe" src="./fortnite logo.jpg" alt="foto da Maria">
+            <img class="foto-equipe" src="./image 8.png" alt="foto da Maria">
             <h3>Maria Eduarda - n°27</h3>
         </div>
         <div>
-            <img class="foto-equipe" src="./fortnite logo.jpg" alt="foto da Kauane">
+            <img class="foto-equipe" src="./20240302_220920 1.png" alt="foto da Kauane">
             <h3>Kauane - n° 22</h3>
         </div>
         
