--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
    <section class="segundo-jogo">
     <div>
-         <h2>Fortnite</h2>
+         <h2>Roblox</h2>
          <p>Roblox é uma plataforma de criação de jogos MMO e sandbox baseados normalmente em mundo aberto, multiplataforma e simulação.</p>
     </div>
     
-<img class="primeirojogo" src="./fortnite logo.jpg" alt="logo do fortnite">
+<img class="primeirojogo" src="./image 2.png" alt="logo do fortnite">
 
 </section>
 
