--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        
        <!-- h1 e h6 são títulos e a diferença são os tamanhos -->
    </header>
-   <section class="primeiro-jogo">
+   <section class="jogo">
         <div>
              <h2>Fortnite</h2>
              <p>Fortnite é um jogo eletrônico multijogador online, desenvolvido pela Epic Games e lançado como diferentes modos de jogo</p>
@@ -25,7 +25,7 @@
 <img class="primeirojogo" src="./fortnite logo.jpg" alt="logo do fortnite">
 
    </section>
-   <section class="segundo-jogo">
+   <section class="jogo">
     <div>
          <h2>Roblox</h2>
          <p>Roblox é uma plataforma de criação de jogos MMO e sandbox baseados normalmente em mundo aberto, multiplataforma e simulação que permite criar do zero seu próprio mundo virtual.</p>
@@ -34,7 +34,7 @@
 <img class="segundojogo" src="./image 2.png" alt="logo do roblox">
 
     </section>
-    <section class="terceiro-jogo">
+    <section class="jogo">
         <div>
              <h2>Multiversus</h2>
              <p>MultiVersus é um jogo de plataforma gratuito que dá vida à profundidade das estrelas icônicas da WB em possibilidades quase infinitas de jogo.</p>
@@ -43,7 +43,7 @@
     <img class="terceirojogo" src="./image 4.png" alt="logo do multiversus">
     
         </section>
-        <section class="quarto-jogo">
+        <section class="jogo">
             <div>
                  <h2>Mario Kart Tour</h2>
                  <p>Mario Kart Tour traz as tradicionais corridas da franquia da Nintendo, porém com uma jogabilidade simplificada.</p>
