--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     </section>
     <section class="jogo1">
-        <img class="terceirojogo" src="./image 4.png" alt="logo do multiversus">
+        <img class="primeirojogo" src="./image 4.png" alt="logo do multiversus">
         <div>
              <h2>Multiversus</h2>
              <p>MultiVersus é um jogo de plataforma gratuito que dá vida à profundidade das estrelas icônicas da WB em possibilidades quase infinitas de jogo.</p>
@@ -51,7 +51,7 @@
                  <p>Mario Kart Tour traz as tradicionais corridas da franquia da Nintendo, porém com uma jogabilidade simplificada.</p>
             </div>
             
-        <img class="quartojogo" src="./image 6.png" alt="logo do mario kart tour">
+        <img class="segundojogo" src="./image 6.png" alt="logo do mario kart tour">
         
             </section>
 
