--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
 <body>
    <header>
        <h1>Jogos de Graça</h1>
-       <h6>Jogos de graça para você, online e offiline. Divulgamos novos jogos em nossas redes sociais</h6>
-       <a href="#equipe"><p>Nossa equipe</p></a>
-       <img src="202205601_jogos_streaming (1).webp" alt="controle de videogame">
+       
+       <div>
+        <h2>Jogos de graça para você, online e offiline. Divulgamos novos jogos em nossas redes sociais</h2>
+       </div>
+       <div>
+        <a href="#equipe"><p>Nossa equipe</p></a>
+        <a href="#cep"><p>CEP</p></a>
+       </div>
        
        <!-- h1 e h6 são títulos e a diferença são os tamanhos -->
    </header>
