--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        </div>
        <div>
         <a href="#equipe"><p>Nossa equipe</p></a>
-        <a href="#cep"><p>CEP</p></a>
+        <a href="https://www.cep.pr.gov.br/"><p>CEP</p></a>
        </div>
        
        <!-- h1 e h6 são títulos e a diferença são os tamanhos -->
