--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
            <h1>Jogos de Graça</h1>
         <h3>Jogos de graça para você, online e offiline. Divulgamos novos jogos em nossas redes sociais</h3>
        </div>
-       <div>
+       <div class="bot">
         <a href="#equipe"><p>Nossa equipe</p></a>
         <a href="#CEP"><p>CEP</p></a>
        </div>
