--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        </div>
        <div class="bot">
         <a href="#equipe"><p>Nossa equipe</p></a>
-        <a href="#CEP"><p>CEP</p></a>
+        <a href="https://www.cep.pr.gov.br/"><p>CEP</p></a>
        </div>
        
        <!-- h1 e h6 são títulos e a diferença são os tamanhos -->
@@ -76,9 +76,6 @@
                 </div>
                 
             </section>
-        <section id="CEP">
-            <a href="https://www.cep.pr.gov.br/"></a>
-        </section>
    <footer>
         <p>Nos siga em: <a href="https://store.steampowered.com/?l=portuguese">nosso Instagram</a></p>
         <p>Entre em contato por (41)xxxxx-xxxx</p>
